Check the validation

--- a/App4/App4/View/Crear.xaml
+++ b/App4/App4/View/Crear.xaml
@@ -1,19 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             NavigationPage.HasNavigationBar="false"
              x:Class="App4.View.Crear">
     <ContentPage.Content>
-        <StackLayout Orientation="Vertical" Padding="30" Spacing="40">
+        <ScrollView>
+            <StackLayout Orientation="Vertical" Padding="30" Spacing="40">
           
             <Frame BackgroundColor="#BF043055" HasShadow="False">
                 <StackLayout Orientation="Vertical" Spacing="10">
-                    <Entry x:Name="Marca" Text="{Binding Description}" Placeholder="Marca de la bicicleta"   
-                           PlaceholderColor="White" HeightRequest="40"   
+                    <Editor x:Name="Marca" Text="{Binding Description}" Placeholder="Marca de la bicicleta"   
+                           PlaceholderColor="White" HeightRequest="150"   
                            Keyboard="Text"  
                            TextColor="White"/>
-                    <Entry x:Name="Imagen" Text="{Binding Password}" Placeholder="Link de la imagen"   
-                           PlaceholderColor="White" HeightRequest="40"   
-                           TextColor="White"/>
+
+                    <Editor  x:Name="Imagen" HeightRequest="150" Placeholder="Link de la imagen"   
+                           PlaceholderColor="White"   
+                           TextColor="White" />
+                    
                 </StackLayout>
             </Frame>
             <StackLayout  x:Name="btnInsert">
@@ -69,5 +73,6 @@
             </StackLayout>
            
         </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
