--- a/App4/App4/MainPage.xaml
+++ b/App4/App4/MainPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:App4"
+               NavigationPage.HasNavigationBar="false"
              x:Class="App4.MainPage">
 
     <ContentPage.Content>
